Add dependencies for commons-lang3, lombok & javadoc plugin